# core

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
architecture/: index.html
changelog/: index.html
docs/: api.md  architecture.md  changelog.md  getting-started.md  index.md  roadmap.md
search/: search_index.json
src/: config.py  db.py  models.py  office_converter.py  pdf_analyzer.py  pdf_extractor.py  pdf_scanner.py  qdpx_merger.py  recipe.py  run_context.py  step1_analyze.py  step2_codebook.py  step3_qdpx.py  step4_evaluation.py
src/qualdatan_core/: __init__.py  _console.py  config.py  config_resolver.py  db.py  events.py  models.py  pdf_analyzer.py  pdf_classifier.py  pdf_coder.py  pdf_scanner.py  plugins.py  recipe.py  run_context.py  step1_analyze.py
src/qualdatan_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qualdatan_core/app_db/: __init__.py  caches.py  codebook.py  codings.py  migrate.py  projects.py
src/qualdatan_core/coding/: analyzer.py  classifier.py  colors.py  visual.py  visual_facet.py
src/qualdatan_core/curation/: __init__.py  bootstrap.py
src/qualdatan_core/export/: __init__.py  pivot.py
src/qualdatan_core/facets/: __init__.py  base.py  loader.py  registry.py  types.py
src/qualdatan_core/layouts/: __init__.py  folder.py
src/qualdatan_core/office/: converter.py
src/qualdatan_core/pdf/: annotator.py  extractor.py  scanner.py
src/qualdatan_core/qdpx/: merger.py
src/qualdatan_core/steps/: step1_analyze.py  step2_codebook.py  step3_qdpx.py  step4_evaluation.py
src/qualdatan_core/triangulation/: __init__.py  db.py
tests/: conftest.py  test_app_db_caches.py  test_app_db_codings.py  test_app_db_foundation.py  test_app_db_migrate.py  test_app_db_projects.py  test_code_colors.py  test_codebook_dao.py  test_config_resolver.py  test_curation.py  test_d3_callsite_wiring.py  test_db.py  test_events.py  test_facets.py  test_folder_layout.py  test_office_converter.py  test_pdf_annotator.py  test_pdf_classifier.py  test_pdf_coder.py  test_pdf_scanner.py  test_pivot_export.py  test_recipe.py  test_run_context_app_db.py  test_step1.py  test_triangulator.py  test_visual.py  test_visual_facet.py
tests/fixtures/codebases/: codebook_bim.yml
tests/fixtures/methods/documentanalysis/: pdf_analyse.yaml  visual_analyse.yaml
tests/fixtures/methods/interviewanalysis/: mayring.yaml  prisma.yaml
