[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualdatan-core"
version = "0.1.0"
description = "Qualdatan core library: qualitative data analysis primitives (PDF, QDPX, LLM coding, run state) without any UI or domain-specific logic."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Friedrich Schroedter" },
]
keywords = ["qualitative-analysis", "maxqda", "refi-qda", "claude", "coding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "anthropic>=0.40.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pymupdf>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/GeneralPawz/Qualdatan"
Repository = "https://github.com/Qualdatan/core"
Issues = "https://github.com/Qualdatan/core/issues"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
# src/qualdatan_core/ is the importable package. Phase A.2 adds subpackages
# (pdf/, qdpx/, steps/, coding/, llm/, facets/) without changing the
# top-level import path.
[tool.setuptools.packages.find]
where = ["src"]
include = ["qualdatan_core*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-q",
    "--strict-markers",
]
markers = [
    "slow: tests that make real API calls or are otherwise slow",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "F401"]
